# CodeRefactor

./: .gitignore  CMakeLists.txt
include/: RefactorTool.h
src/: CMakeLists.txt  RefactorTool.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/tests_data/: leak_example.cpp
